--- a/vignettes/examplesmrg.Rmd
+++ b/vignettes/examplesmrg.Rmd
@@ -21,8 +21,8 @@ knitr::opts_chunk$set(
 This section contains several examples on how to merge cluster data, either
 generated with **clugenr** or from other sources. Although it is possible to
 merge data in any dimension, these examples will focus on merging 2D data.
-Therefore, we'll use the same `plot_examples_2d()` function used for the [2D examples](articles/examples3d2.html). Therefore, we require the following setup
-code:
+Therefore, we'll use the same `plot_examples_2d()` function used for the
+`vignette("examples2d")`, requiring the following setup code:
 
 ```{r setup, message=FALSE, warning=FALSE}
 # Load the clugenr library
