--- a/vignettes/examples2d.Rmd
+++ b/vignettes/examples2d.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Examples in 2D"
-output: rmarkdown::html_vignette
+output: rmdformats::robobook
 vignette: >
   %\VignetteIndexEntry{Examples in 2D}
   %\VignetteEngine{knitr::rmarkdown}
