--- a/vignettes/examples3d2.Rmd
+++ b/vignettes/examples3d2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Examples in 3D: part II"
-output: rmarkdown::html_vignette
+output: rmdformats::robobook
 vignette: >
   %\VignetteIndexEntry{Examples in 3D: part II}
   %\VignetteEngine{knitr::rmarkdown}
