Use prettydoc instead of rmdformats for vignettes

--- a/vignettes/dev.Rmd
+++ b/vignettes/dev.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Development"
-output: rmdformats::robobook
+output:
+  prettydoc::html_pretty:
+    theme: tactile
+    highlight: vignette
 vignette: >
   %\VignetteIndexEntry{Development}
   %\VignetteEngine{knitr::rmarkdown}
