--- a/vignettes/examples2d.Rmd
+++ b/vignettes/examples2d.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Examples in 2D"
-output: rmdformats::robobook
+output:
+  prettydoc::html_pretty:
+    theme: tactile
+    highlight: vignette
 vignette: >
   %\VignetteIndexEntry{Examples in 2D}
   %\VignetteEngine{knitr::rmarkdown}
