--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Examples in other dimensions"
-output: rmdformats::robobook
+output:
+  prettydoc::html_pretty:
+    theme: tactile
+    highlight: vignette
 vignette: >
   %\VignetteIndexEntry{Examples in other dimensions}
   %\VignetteEngine{knitr::rmarkdown}
