--- a/vignettes/theory.Rmd
+++ b/vignettes/theory.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "Theory"
-output: rmdformats::robobook
+output:
+  prettydoc::html_pretty:
+    theme: tactile
+    highlight: vignette
 vignette: >
   %\VignetteIndexEntry{Theory}
   %\VignetteEngine{knitr::rmarkdown}
