Reduce vignette images DPI to 120

--- a/vignettes/dev.Rmd
+++ b/vignettes/dev.Rmd
@@ -13,7 +13,9 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  out.width = "100%",
+  dpi = 120
 )
 ```
 
