--- a/vignettes/examplesnd.Rmd
+++ b/vignettes/examplesnd.Rmd
@@ -57,6 +57,9 @@ e087 <- clugen(1, 3, 2000, 1, 0, 10, 6, 1.5, 0, seed = seed, proj_dist_fn = proj
 ```
 
 ```{r}
+#| fig.alt: >
+#|   Three density plots displaying an example of 1D data generation with
+#|   clugenr.
 plot_examples_1d(list(e = e085, t = "e085: proj_dist_fn='norm'"),
                  list(e = e086, t = "e086: proj_dist_fn='unif'"),
                  list(e = e087, t = "e087: custom proj_dist_fn (Weibull)"),
@@ -80,6 +83,9 @@ e088 <- clugen(nd, 6, 1500, c(1, 1, 0.5, 0, 0), pi / 16, rep.int(30, nd), 30, 4,
 ```
 
 ```{r, fig.asp = 1}
+#| fig.alt: >
+#|   Grid of 2D scatter plots exemplifying 5D data generation with default
+#|   arguments.
 plot_examples_nd(e088, "e088: 5D with optional parameters set to defaults")
 ```
 
@@ -97,6 +103,9 @@ e089 <- clugen(nd, 6, 1500, c(0.1, 0.3, 0.5, 0.3, 0.1), pi / 12, rep.int(30, nd)
 ```
 
 ```{r, fig.asp = 1}
+#| fig.alt: >
+#|   Grid of 2D scatter plots exemplifying 5D data generation with uniform
+#|   projections and normal point distributions.
 plot_examples_nd(e089, "e089: 5D with proj_dist_fn='unif' and point_dist_fn='n'")
 ```
 
